feat: upgrade spring boot 3